--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="css\ab.css">
-    <link rel="stylesheet" href="D:\portfolio\css\bootstrap.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css">
  </head>
 <body>
-    <header>
+   
+    <header style="background-image: url('images1/no.jpg');">
         <div>
             <nav>
                 <img src="images1/logo.png" class="logo">
@@ -69,7 +69,8 @@
 
             </section>
 
-        <section id="skills">
+   
+        <section id="skills" style="background-image: url('images1/R\ \(1\).jpg');">
                 <div class="info">
                     <h1> Teched Classes</h1>
                 </div>
@@ -142,9 +143,9 @@
                         <img src="images1/pay.png">
                         <h2> Python</h2>
                         <p>Python is a general purpose programming language. 
-                            It is very easy to learn, easy syntax and readability 
+                            It is very easy to learn, easy syntax and
                             is one of the reasons why developers are switching to 
-                            python from other programming languages. We can use python 
+                            python from other programming languages.We can use python 
                             as object oriented and procedure oriented language as well.</p>
                             <a href="https://en.wikipedia.org/wiki/Web_design">Learn more</a>
                     
@@ -189,7 +190,7 @@
                         <h2>Football</h2>
                         <p>Football is a word which could mean one of
                             several sports.
-                            Football is often called a sport of violence 
+                            Football is called a sport of violence 
                             where the football is advanced down a field by
                             runners or by passing until the opposing team 
                             tackles or brings the player with the ball to the ground.
@@ -214,7 +215,7 @@
                         in the form of writing or images, typically 
                         composed of many pages (made of papyrus) bound together and protected by a
                         cover. The technical term for this physical arrangement
-                        is codex (plural, codices ).
+                        is codex (plural).
                     </p>
                 </div>
             </div>
@@ -255,11 +256,9 @@
                 </div>
 
                 <div class="mee"> 
-                    <h3>Made By Mansi Rawat</h3>
+                    <h2>Made By Mansi Rawat</h2>
                 </div>
         </section>
 </body>
 </html>
 
-<script src="E:\js\jquery.js"></script>
-<script src="E:\js\bootstrap.js"></script>
